# predictive-analysis-sagemaker

./: .gitignore  README.md  pyproject.toml
predictive_analysis_sagemaker/: salary_prediction.ipynb
predictive_analysis_sagemaker/predict_neural_net/: ann_regression.ipynb
predictive_analysis_sagemaker/predict_premium/: multi_linear_regression.ipynb
predictive_analysis_sagemaker/predict_salary/: README.md  salary_prediction.ipynb
predictive_analysis_sagemaker/src/logger_utils/: __init__.py
salary_prediction_sagemaker/: salary_prediction.ipynb
salary_prediction_sagemaker/src/logger_utils/: logger_def.py  logging_config.json
