[tool.poetry]
name = "predictive-analysis-sagemaker"
version = "0.1.0"
description = "Linear regression for prediction"
authors = ["Arifur Rahman <md.arifur.rahman056@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.2"
sagemaker = "^2.231.0"
boto3 = "^1.35.17"
tensorflow = "^2.17.0"
keras = "^3.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
tensorflow-metal = "^1.1.0"
types-tensorflow = "^2.17.0.20240920"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
